--- a/force-app/main/default/lwc/addProductsModal/addProductsModal.html
+++ b/force-app/main/default/lwc/addProductsModal/addProductsModal.html
@@ -22,7 +22,7 @@
 </template>
 <template lwc:elseif={showEditProductsModal} >
     <lightning-quick-action-panel header="商品の編集">
-        <!--商品の編集が可能です-->
+        商品の編集が可能です
         <div>
         <template if:true={products}>
                 <template for:each={products} for:item="product">
