--- a/force-app/main/default/lwc/addProductsModal/addProductsModal.html
+++ b/force-app/main/default/lwc/addProductsModal/addProductsModal.html
@@ -1,6 +1,6 @@
 <template>
 <template lwc:if={showAddProductsModal}>
-    <lightning-quick-action-panel header="商品の追加">
+    <lightning-quick-action-panel header="商品追加">
         商品一覧
         <div>
             <template if:true={products}>
