--- a/force-app/main/default/lwc/addProductsModal/addProductsModal.html
+++ b/force-app/main/default/lwc/addProductsModal/addProductsModal.html
@@ -1,14 +1,18 @@
 <template>
-<template lwc:if={showAddProductsModal}>
-    <lightning-quick-action-panel header="商品追加">
+<template if:true={showAddProductsModal}>
+    <lightning-quick-action-panel header="商品の追加">
         商品一覧
         <div>
+        <template if:true={isLoading}>
+        <lightning-spinner alternative-text="Loading" size="medium"></lightning-spinner>
+        </template>
             <template if:true={products}>
-                <template for:each={products} for:item="product">
-                    <p key={product.Id}>
-                        {product.Product2.Name}: {product.Product2.ProductCode} - {product.UnitPrice}
-                    </p>
-                </template>
+                    <lightning-datatable
+                     key-field="Id"
+                     data={products}
+                     columns={columns}
+                     onrowaction={handleRowAction}>
+                    </lightning-datatable>
             </template>
         </div>
         <template if:false={products}>
@@ -20,10 +24,13 @@
         </div>
     </lightning-quick-action-panel>
 </template>
-<template lwc:elseif={showEditProductsModal} >
+<template if:true={showEditProductsModal} >
     <lightning-quick-action-panel header="商品の編集">
         商品の編集が可能です
         <div>
+        <template if:true={isLoading}>
+            <lightning-spinner alternative-text="Loading" size="medium"></lightning-spinner>
+        </template>
         <template if:true={products}>
                 <template for:each={products} for:item="product">
                         <p key={product.Id}>
